This fixes an issue with backside of mentor cards being visible in iOS mobile browsers

--- a/src/components/MentorCard/mentorCard.module.css
+++ b/src/components/MentorCard/mentorCard.module.css
@@ -15,6 +15,7 @@
   border: 5px dashed #ff007f;
   max-height: 100%;
   overflow: auto;
+  backface-visibility: hidden;
 }
 
 .card:hover {
